fix alignment

--- a/src/templates/SingleService.scss
+++ b/src/templates/SingleService.scss
@@ -76,8 +76,12 @@
             }
             tbody {
                 td {
-                    padding: 5px;
-                }     
+          padding: 5px;
+          text-align: center;
+        }
+        > tr > :nth-child(1) {
+          text-align: left;
+        }   
             }     
         }
         ul {
